--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
     <string name="nama">Aldys Igidia Triatmaja</string>
     <string name="alamat">Turi, Sleman</string>
+    <string name="nama2">Aldys Igidia Triatmaja</string>
+    <string name="alamat2">Turi, Sleman</string>
+    <string name="nohp2">085743332127</string>
     <string name="copy">copyright, 2025</string>
 </resources>
