--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="nama2">Aldys Igidia Triatmaja</string>
     <string name="alamat2">Turi, Sleman</string>
     <string name="nohp2">085743332127</string>
+    <string name="nama3">Jazlan Syahreza</string>
+    <string name="alamat3">Turi, Sleman</string>
+    <string name="nohp3">085743332128</string>
     <string name="copy">copyright, 2025</string>
 </resources>
